<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Nahid Larhziale.</b></string>
    <string name="accept">Aceptar</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="textStep1">Prepárate para explorar el mundo mágico de esta aplicación inspirada en Spyro</string>

    <string name="textStep2">Aquí aprenderás a navegar por pestañas llenas de dragones, mundos fascinantes y montones de tesoros brillantes.</string>
    <string name="textStep3">¿Listo para empezar?</string>
    <string name="textStep4">Pulsa "Comenzar" y deja que Spyro te lleve volando a través de esta guía interactiva.</string>
    <string name="comenzar">Comenzar</string>
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="title_activity_video">VideoActivity</string>
</resources>